# kit

./: .gitignore  .goreleaser.yaml  ABI.md  CHANGELOG.md  CLAUDE.md  GUIDE.md  LICENSE  README.md  api.go  codec.go  devrun.go  facade_native.go  facade_wasm.go  gamekit.go  go.mod  go.sum  grid.go  host.go  kit.go  package-lock.json  package.json  room.go  run.go  scorekeeper_test.go  types.go
.changeset/: character-ctx-feature.md  config-key-specs.md  config.json  credits-economy-abi.md  drop-profile-get.md  embed-cli-version.md  frame-diffing-v2.md  get-started-doc.md  host-steal-detection.md  kittest-kv-unavailable.md  large-room-callbacks.md  large-room-scale.md  leaderboard-publishing-gate.md  license-and-player-bounds-docs.md  meta-declared-controls.md  meta-wire-revision.md  proper-go-repo.md  quiet-timers.md  reference-host-and-cli.md  release-cli-from-kit.md  resync-retry-keyframe.md  room-lifecycle-modes.md  rust-sdk-crate.md  scaffold-v2-path.md  scorekeeper-helper.md  shellcade-kit-rename.md  smoke-scripts.md  wave1-kit-polish.md  wide-glyph-width-lint.md  windows-devrun-build.md  wire-rostercap.md
.github/: dependabot.yml
.github/workflows/: ci.yml  goreleaser.yml  govulncheck.yml  release-cli.yml  release.yml
cmd/gamekit/: main.go
cmd/kit/: main.go
cmd/shellcade-kit/: artifact.go  artifact_test.go  eaw.go  license.go  lintwidth.go  lintwidth_test.go  main.go  new.go  new_test.go  play.go  smoke.go  smoke_test.go
cmd/shellcade-kit/testdata/paritygame/: go.mod  go.sum  main.go  smoke.yaml
cmd/shellcade-kit/testdata/widthlint/: fail.go.txt  pass.go.txt
crossverify/: .gitignore  Cargo.toml  README.md
crossverify/examples/: bench.rs
crossverify/src/: lib.rs
crossverify/tests/: golden.rs
crossverify/tests/golden/: blackjack.dgld  chess.dgld  pokies.dgld  shellracer.dgld  synth-cursor-blink.dgld  synth-grapheme-churn.dgld  synth-half-screen.dgld  synth-scroll-row.dgld  synth-static-idle.dgld  synth-worstcase-fullchange.dgld  tic-tac-toe.dgld
docs/: docs.go  get-started.md
examples/pokies/: README.md  exports.go  layout.go  main.go  pokies.wasm  room.go  variant.go
examples/pokies/pokies/: layout.go  room.go  variant.go
host/blobstore/: blobstore.go  blobstore_test.go  checkpoint.go  checkpoint_test.go  dir.go  instrument.go  instrument_test.go
host/canvas/: ascii.go  ascii_test.go  canvas.go  color.go
host/gameabi/: abi.go  character_ctx_test.go  checkpoint_cadence.go  checkpoint_cadence_test.go  checkpoint_capture_test.go  checkpoint_drainbudget_test.go  checkpoint_store.go  checkpoint_store_test.go  codec.go  codec_test.go  controls_test.go  delta.go  delta_conformance_test.go  export.go  gamekind_test.go  hardening_test.go  hibernate.go  hibernate_e2e_test.go  hibernate_test.go  host.go  host_test.go  largeroom_test.go  lifecycle_test.go  loadspike_test.go  metrics_test.go  quarantine.go  quarantine_test.go  slug.go  slug_test.go  snapshot.go  snapshot_cfg_test.go  snapshot_test.go  steal.go  steal_linux.go  steal_linux_test.go  steal_other.go  steal_test.go  storefault_test.go
host/gameabi/conformance/: conformance.go  conformance_test.go  delta_conformance_test.go  diffdetail_test.go  fixture_rs_kit_test.go  fixture_rs_test.go  script.go  smoke.go  smoke_test.go
host/gameabi/testdata/fixture/: fixture.wasm  go.mod  go.sum  main.go
host/gameabi/testdata/fixture-rs/: .gitignore  Cargo.toml  fixture-rs.wasm
host/gameabi/testdata/fixture-rs-kit/: .gitignore  Cargo.toml  fixture-rs-kit.wasm
host/gameabi/testdata/fixture-rs-kit/src/: lib.rs
host/gameabi/testdata/fixture-rs/src/: lib.rs
host/gameabi/testdata/loadspike/: exports.go  go.mod  go.sum  loadspike-cons.wasm  loadspike.wasm  main.go
host/memsvc/: memsvc.go  memsvc_test.go
host/render/: grid.go  grid_test.go  render.go  render_test.go  sgr.go
host/sdk/: account.go  checkpoint_test.go  config.go  controls.go  controls_test.go  errors.go  game.go  leaderboard.go  leaderboard_test.go  lifecycle_test.go  registry.go  registry_test.go  room.go  room_test.go  roomid.go  roomid_test.go  services.go  testroom.go  types.go
host/session/: heartbeat.go  heartbeat_test.go  intent.go  memsession.go  session.go  signout.go
internal/diffbench/: README.md  decode.go  diffbench_test.go  encode.go  golden_test.go  micro_test.go  parity_test.go  seq.go
internal/diffbench/testdata/: blackjack.fseq  chess.fseq  pokies.fseq  shellracer.fseq  tic-tac-toe.fseq
internal/game/: ansi.go  api.go  character_test.go  codec.go  codec_meta_test.go  controls_meta_test.go  devinput.go  devinput_test.go  devrun.go  devrun_test.go  devrun_winch_unix.go  devrun_winch_windows.go  diff_bench_test.go  diff_test.go  grapheme_test.go  grid.go  grid_test.go  host.go  input_test.go  largeroom_test.go  room.go  run.go  scorekeeper.go  types.go
internal/smoke/: cli.go  fixture_test.go  parse.go  parse_test.go  render_test.go  run.go  run_test.go  smoke.go  write.go
keyhold/: keyhold.go  keyhold_test.go
kittest/: character_conformance_test.go  conformance_test.go  kittest.go  kvunavailable_test.go
rust/: Cargo.toml  README.md
rust/src/: broadcast.rs  delta.rs  frame.rs  host.rs  input.rs  json.rs  lib.rs  rng.rs  room.rs  rt.rs  types.rs  wire.rs
rust/tests/golden/: ctx_character.txt  scalars.txt
scripts/: sync-crate-version.mjs  tag-release.sh
smoke/: smoke.go
wire/: character_golden_test.go  character_test.go  controls_test.go  delta.go  delta_test.go  gamekind_test.go  largeroom_test.go  revision_crosscheck_test.go  rostercap_crosscheck_test.go  scalar_golden_test.go  wire.go  wire_test.go
