[package]
name = "diff-rs"
version = "0.1.0"
edition = "2021"
publish = false

# diff-rs — a standalone Rust reimplementation of the shellcade ABI v2 RUN-LIST
# frame-delta encoder (24-byte grapheme cells, 9-byte epoch header, keyframe
# form). Implemented from the v2 cell/container layout (kit/ABI.md v2 + the Go
# reference at kit/internal/diffbench/encode.go) to (a) measure cross-language
# difficulty of the v2 wire path and (b) be verified BYTE-IDENTICAL against the
# Go reference encoder via committed golden vectors.
#
# This is a host-native library crate (NOT the wasm guest): `cargo test` builds
# for the host so the unit + golden-vector tests run with the normal harness.
#
#   rustup run stable cargo test --release
#   rustup run stable cargo bench         # perf sanity (criterion-free timing)

[lib]
crate-type = ["lib"]

[dependencies]

[profile.release]
opt-level = 3
lto = true
